--- a/ru.javacourse.atm/pom.xml
+++ b/ru.javacourse.atm/pom.xml
@@ -7,6 +7,7 @@
     <groupId>atm-app</groupId>
     <artifactId>ru.javacourse.atm</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
@@ -24,9 +25,14 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.18</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
-    
+
+
+    <properties>
+        <lombok.version>1.18.18</lombok.version>
+    </properties>
+
 </project>
