--- a/ru.javacourse.atm/pom.xml
+++ b/ru.javacourse.atm/pom.xml
@@ -8,18 +8,11 @@
     <artifactId>ru.javacourse.atm</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <lombok.version>1.18.18</lombok.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -29,10 +22,4 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
-
-    <properties>
-        <lombok.version>1.18.18</lombok.version>
-    </properties>
-
 </project>
