--- a/ru.javacourse.atm/atm/pom.xml
+++ b/ru.javacourse.atm/atm/pom.xml
@@ -10,5 +10,22 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>atm</artifactId>
 
+    <dependencies>
+        <dependency>
+            <artifactId>common</artifactId>
+            <groupId>atm-app</groupId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
