--- a/ru.javacourse.atm/common/pom.xml
+++ b/ru.javacourse.atm/common/pom.xml
@@ -2,6 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <properties>
+        <apache.common.version>1.15</apache.common.version>
+    </properties>
     <parent>
         <artifactId>ru.javacourse.atm</artifactId>
         <groupId>atm-app</groupId>
@@ -10,5 +13,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>common</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${apache.common.version}</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
