--- a/ru.javacourse.atm/external.bank.api/pom.xml
+++ b/ru.javacourse.atm/external.bank.api/pom.xml
@@ -16,5 +16,18 @@
             <groupId>atm-app</groupId>
             <version>${project.version}</version>
         </dependency>
+        <!-- db support -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
